添加制作者姓名

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,8 @@ html
           &emsp;2.点击start按钮开始(查询过程可能会有几秒时间,如果等了一会结果或者报错,有可能是服务器挂了or你输入的链接有问题)<br/>
           &emsp;3.在这个区域里显示的表格里,每个表格对应一个下载按钮,点击之后可以以CSV格式下载到本地.（常用的读取表格的工具都支持CSV）
 
-
+    footer.body-footer
+      div 制作by CQcookie(Cody Chen)
     script(src='//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js')
     script(src='/js/export-table.js')
     script(src='/js/table-to-array.js')
