--- a/public/style/less/index.less
+++ b/public/style/less/index.less
@@ -86,3 +86,12 @@
   }
 }
 
+.body-footer {
+  position: fixed;
+  bottom: 6px;
+  width: 100%;
+  font-size: 14px;
+  color: @main-color;
+  text-align: center;
+}
+
